--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+
 .dual-border {
   border-width: 3px;
   border-style: solid;
