--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,7 @@
 @import "tailwindcss";
 
-.font-bangla {
-  font-family: 'Hind Siliguri', 'Arial', sans-serif;
-}
-
-.font-english {
-  font-family: 'Arial', sans-serif;
+.myFont {
+  font-family:var(--font-bangla);
 }
 
 
