--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+/* globals.css */
 @import "tailwindcss";
 
 
@@ -7,13 +8,12 @@ html, body {
   overflow-x: hidden;
 }
 
-
 .dual-border {
   border-width: 3px;
   border-style: solid;
   border-image: linear-gradient(to right, green 50%, red 50%);
   border-image-slice: 1;
-  border-radius: 0.75rem; /* Tailwind's rounded-xl */
+  border-radius: 0.75rem;
 }
 
 @keyframes fade-in-up {
